[project]
name = "sorabot"
version = "1.0.0"
description = "基于 Nonebot2，互通多平台，超可爱的林汐酱"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "QQ 频道", module_name = "nonebot.adapters.qqguild" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram"}
]
plugins = []
plugin_dirs = ["sorabot/plugins"]
builtin_plugins = ["echo"]

[tool.poetry]
name = "sorabot"
version = "1.0.0"
description = "基于 Nonebot2，互通多平台，超可爱的林汐酱"
authors = ["KomoriDev <mute231010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
cattrs = "^23.1.2"
nonebot-plugin-gocqhttp = "^0.6.10"
cookiecutter = "2.1.1"
cachetools = "^5.3.1"
emoji = "^2.6.0"
aiosqlite = "0.17.0"
strenum = "^0.4.15"
pygments = "^2.15.1"
nonebot-adapter-telegram = "^0.1.0b14"
nonebot-adapter-onebot = "^2.2.3"
nonebot-adapter-qqguild = "^0.2.3"
tortoise = "^0.1.1"
rich = "^13.4.2"
tortoise-orm = "^0.19.3"
apscheduler = "^3.10.1"
pillow = "9.5.0"
nonebot-plugin-send-anything-anywhere = "^0.2.7"
ruamel-yaml = "^0.17.32"
tqdm = "^4.65.0"
bbcode = "^1.1.0"
pil-utils = "^0.1.7"
gitpython = "^3.1.32"
ujson = "^5.8.0"
aiofiles = "^23.1.0"
retrying = "^1.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.276"
pycln = "^2.1.3"
isort = "^5.12.0"
black = "^23.7.0"
pre-commit = "^3.0.0"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["sora", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
line-length = 120
target-version = "py310"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./tests", extraPaths = ["./"] },
    { root = "./" },
]
typeCheckingMode = "basic"
reportShadowedImports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
