[project]
name = "sorabot"
version = "1.0.0"
description = "基于 NoneBot2 开发，互通多平台，超可爱的林汐酱"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [{name = "Komorebi", email = "mute231010@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "nonebot2[fastapi]>=2.0.1",
    "tortoise>=0.1.1",
    "tortoise-orm>=0.20.0",
    "nonebot-adapter-onebot>=2.2.4",
    "nonebot-adapter-qqguild>=0.2.4",
    "nonebot-adapter-telegram>=0.1.0b14",
    "ujson>=5.8.0",
    "ruamel-yaml>=0.17.32",
    "apscheduler>=3.10.3",
    "httpx>=0.24.1",
    "aiofiles>=23.2.1",
    "retrying>=1.3.4",
    "rich>=13.5.2",
    "GitPython>=3.1.32",
    "nonebot-plugin-send-anything-anywhere>=0.3.0",
    "nonebot-plugin-alconna>=0.14.1",
    "pillow>=10.0.0",
    "websockets>=11.0.3",
    "pandas>=2.0.3",
    "toml>=0.10.2",
]

[project.urls]
homepage = "https://bot.netsora.info/"
repository = "https://github.com/netsora/SoraBot"
documentation = "https://bot.netsora.info/"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.284",
    "pre-commit>=3.3.3",
    "pycln>=2.2.2",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "QQ 频道", module_name = "nonebot.adapters.qqguild" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram"}
]
plugins = []
plugin_dirs = ["sora/plugins"]
builtin_plugins = [""]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
line-length = 120
target-version = "py310"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./tests", extraPaths = ["./"] },
    { root = "./" },
]
typeCheckingMode = "basic"
reportShadowedImports = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
